fix(#I11E4E): 导航条图标右上方 badge 增加 z-index 防止被其他遮挡
#Issues
close https://gitee.com/LongbowEnterprise/dashboard/issues?id=I11E4E

--- a/Bootstrap.Admin/wwwroot/css/theme.css
+++ b/Bootstrap.Admin/wwwroot/css/theme.css
@@ -40,6 +40,7 @@ aside .bg, aside .nav-brand, aside .nav-header, .header .nav, .userinfo .dropdow
         right: -6px;
         top: -14px;
         opacity: 0.8;
+        z-index: 1;
     }
 
     .header .navbar {
